# comcer2

./: .gitignore  README.MD  app.py  credentials.json  desktop_credentials.json  forms.py  logger_config.py  pyproject.toml  utils.py
assets/: base.xlsx
services/: api.py  approval.py  drive.py  excel.py
templates/: approve.html  base.html  download.html  index.html  loading.html
